--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <video controls autoplay>
       <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4" type="video/mp4" width="600px" height="400px">
       <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.ogg" type="video/ogg" width="600px" height="400px">
+        <p>Sorry your browser doesn't support HTML5 Audio! Please <a href="http://browsehappy.com/?locale=en">upgrade your browser</a>.</p>
       
       
     </video>
